--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,34 @@
-body {
+:root {
   --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   font-family: var(--font-family);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --color-white: #fff;
-  --color-black: #000;
+
+  --light-color-light: #fff;
+  --dark-color-light: #000;
+  --hints-color-light: rgba(0, 0, 0, 0.4);
+  --button-bg-color-light: #8C8DFC;
+  --main-bg-color-light: #F3F5FF;
+  --border-color-light: rgba(0, 0, 0, 0.08);
+
+  --sm-font-size: 14px;
+  --md-font-size: 18px;
+  --large-font-size: 24px;
+  --xl-font-size: 30px;
+  --xxl-font-size: 48px;
+
+  --bold-font-weight: 800;
+}
+
+body, html {
+  color: var(--main-bg-color-light);
+}
+
+h2 {
+  font-weight: var(--bold-font-weight);
+  font-size: var(--xl-font-size);
 }
 
 .menu {
@@ -24,8 +46,8 @@ body {
     width: 100%;
     max-width: 160px;
     height: 25px;
-    background-color: var(--color-white);
-    border: 1px solid var(--color-black);
+    background-color: var(--light-color-light);
+    border: 1px solid var(--dark-color-light);
     border-radius: 13px;
     outline: none;
     cursor: pointer;
@@ -52,8 +74,8 @@ body {
   width: 100%;
   max-width: 250px;
   height: 200px;
-  background-color: var(--color-white);
-  border: 1px solid var(--color-black);
+  background-color: var(--light-color-light);
+  border: 1px solid var(-border-color-light);
   border-radius: 8px;
 
   &.open {
@@ -63,4 +85,94 @@ body {
   &.closed {
     display: none;
   }
+}
+
+.transaction {
+  &-title {
+    text-align: center;
+  }
+
+  &-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 20px;
+    background-color: var(--light-color-light);
+    transform: translate(-50%, -50%);
+  }
+
+  &-field {
+    width: 100%;
+    width: 500px;
+    height: 100%;
+    max-height: 135px;
+    margin-bottom: 20px;
+    padding: 0 25px 10px 25px;
+    border: 1px solid var(--border-color-light);
+    border-radius: 4px;
+
+    &-title {
+      display: block;
+      margin-bottom: 10px;
+      color: var(--hints-color-light);
+    }
+  }
+}
+
+.currency {
+  &-selector {
+    color: var(--dark-color-light);
+    font-size: var(--xxl-font-size);
+    // background-color: transparent;
+    border: none;
+    outline: none;
+  }
+
+  &-input {
+    max-width: 250px;
+    color: var(--dark-color-light);
+    font-size: var(--xxl-font-size);
+    border: none;
+    outline: none;
+
+    &-address {
+      width: 100%;
+      font-size: var(--md-font-size);
+      border: none;
+    }
+
+    &-wrapper {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      max-width: 500px;
+      margin-top: 10px;
+      background-color: var(--light-color-light);
+
+      & > span {
+        color: var(--hints-color-light);
+      }
+
+      &.border {
+        border-bottom: 1px solid var(--border-color-light);
+      }
+    }
+
+    &::placeholder {
+      color: var(--hints-color-light);
+      font-size: var(--xxl-font-size);
+      line-height: 40px;
+    }
+  }
+}
+
+.submit-button {
+  width: 100%;
+  max-width: 500px;
+  height: 80px;
+  color: var(--light-color-light);
+  font-size: var(--large-font-size);
+  background-color: var(--button-bg-color-light);
+  border: none;
+  border-radius: 40px;
 }
