--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -20,6 +20,7 @@
     max-width: 500px;
     padding: 20px;
     background-color: var(--light-color-light);
+    border-radius: 4px;
   }
 
   &-field {
