--- a/src/index.scss
+++ b/src/index.scss
@@ -10,8 +10,9 @@
   --dark-color-light: #000;
   --hints-color-light: rgba(0, 0, 0, 0.4);
   --button-bg-color-light: #8C8DFC;
-  --main-bg-color-light: #F3F5FF;
-  --border-color-light: rgba(0, 0, 0, 0.08);
+  --main-bg-color-light: #F3F4F7;
+  --bg-block-color-light: #F3F5FF;
+  --border-color-light: rgba(24, 13, 13, 0.08);
   --copyblock-color-light: rgba(0, 0, 0, 0.04);
   --input-color-light: rgba(0, 0, 0, 0.02);
   --transparent: transparent;
@@ -26,7 +27,9 @@
 }
 
 body, html {
-  color: var(--main-bg-color-light);
+  margin: 0;
+  padding: 0;
+  background-color: var(--main-bg-color-light);
 }
 
 body.fixed {
@@ -47,6 +50,18 @@ h2 {
   background-color: var(--button-bg-color-light);
   border: none;
   border-radius: 40px;
+  outline: none;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: var(--main-bg-color-light);
 }
