--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -3,6 +3,15 @@
     text-align: center;
   }
 
+  &-back {
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    background: url(../../images/arrow-back.svg);
+    border-radius: 24px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+  }
+
   &-fee {
     margin-top: 24px;
     color: var(--dark-color-light);
@@ -15,12 +24,23 @@
   }
 
   &-wrapper {
+    position: relative;
     top: 50%;
+    top: 32px;
     left: 50%;
+    left: 32px;
     max-width: 500px;
     padding: 20px;
     background-color: var(--light-color-light);
     border-radius: 4px;
+
+    &.open {
+      display: block;
+    }
+
+    &.closed {
+      display: none;
+    }
   }
 
   &-field {
@@ -47,6 +67,12 @@
     background-color: var(--transparent);
     border: none;
     outline: none;
+
+    & > option {
+      & > p {
+        font-size: var(--large-font-size);
+      }
+    }
   }
 
   &-input {
@@ -63,12 +89,12 @@
     }
 
     &-wrapper {
-      display: flex;
+      display: flex; 
       justify-content: space-between;
       width: 100%;
       max-width: 500px;
       margin-top: 10px;
-      background-color: var(--light-color-light);
+      background-color: var(--transparent);
 
       & > span {
         color: var(--hints-color-light);
