--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -8,8 +8,14 @@
     width: 48px;
     height: 48px;
     background: url(../../images/arrow-back.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 32px;
+    border: none;
     border-radius: 24px;
+    outline: none;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
   }
 
   &-fee {
