--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
 .menu {
   &-wrapper {
-    padding: 16px;
+    padding: 16px 16px 0;
   }
 
   &-logo {
@@ -17,6 +17,7 @@
   &-route { 
     display: block;
     box-sizing: content-box;
+    margin-top: 10px;
     padding-bottom: 10px;
     color: var(--dark-color-light);
     border-bottom: 4px solid var(--transparent);
