--- a/src/index.scss
+++ b/src/index.scss
@@ -61,7 +61,8 @@ h2 {
   align-items: center;
   width: 100%;
   height: 100%;
+  min-height: calc(100vh - 100px);
   margin: 0;
-  padding: 0;
+  padding: 16px 0;
   background-color: var(--main-bg-color-light);
 }
