--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -6,8 +6,9 @@
   width: 100%;
   max-width: 300px;
   padding: 32px;
-  background-color: var(--light-color-light);
-  border: 1px solid var(--border-color-light);
+  color: var(--dark-color);
+  background-color: var(--light-color);
+  border: 1px solid var(--border-color);
   border-radius: 8px;
   transform: translate(-50%, -50%);
 
@@ -38,7 +39,7 @@
     z-index: 1000;
     width: 100vw;
     height: 100vw;
-    background-color: var(--dark-color-light);
+    background-color: var(--dark-color);
     opacity: 0.4;
 
     &.open {
@@ -68,7 +69,7 @@
     left: 0;
     width: 30px;
     height: 1px;
-    background-color: var(--hints-color-light);
+    background-color: var(--hints-color);
     content: '';
   }
 
