--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -7,7 +7,7 @@
   max-width: 300px;
   padding: 32px;
   color: var(--dark-color);
-  background-color: var(--light-color);
+  background-color: var(--modal-bg-color);
   border: 1px solid var(--border-color);
   border-radius: 8px;
   transform: translate(-50%, -50%);
