--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,5 +4,42 @@
   background-color: var(--copyblock-color);
   border: none;
   border-radius: 32px;
-  outline: none;
+  outline: none; 
+  cursor: pointer;
+}
+
+.footer {
+  &-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    padding: 30px;
+  }
+
+  &-link {
+    margin-right: 10px;
+    color: var(--links-color);
+
+    &:visited {
+      color: var(--links-color);
+    }
+  }
+
+  &-links-block {
+    display: flex;
+    justify-content: space-between;
+    float: left;
+    width: 195px;
+    min-width: 195px;
+    height: 20px;
+  }
+
+  &-menu {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    color: var(--hints-color);
+    text-align: center;
+  }
 }
