--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -13,11 +13,71 @@
   transform: translate(-50%, -50%);
 
   &.wallet {
-    top: 15px;
-    right: 10px;
+    top: 30px;
+    left: 100%;
     width: 100%;
     max-width: 560px;
-    height: 200px;
+    transform: translateX(-105%);
+
+    & > .wallet-buttons {
+      & > button {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 20px;
+        background-color: var(--transparent);
+        border: none;
+        outline: none;
+        cursor: pointer;
+
+        & > .icon {
+          &-qr, &-edit, &-disconnect {
+            width: 25px;
+            height: 25px;
+            margin-right: 30px;
+          }
+
+          &-edit {
+            background: url(../../images/icon-edit.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+          }
+
+          &-qr {
+            background: url(../../images/icon-qr.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+          }
+
+          &-disconnect {
+            background: url(../../images/icon-disconnect.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+          }
+        }
+      }
+    }
+
+    & > .wallet-title {
+      color: var(--dark-color);
+      font-weight: var(--bold-font-weight);
+      font-size: var(--xl-font-size);
+    }
+
+    & > .horizontal-line {
+      width: calc(100% + 64px);
+      height: 1px;
+      background-color: var(--copyblock-color);
+      transform: translateX(-32px);
+    }
+
+    & > .copy-block {
+      margin-bottom: 40px;
+      font-size: var(--sm-font-size);
+    }
   }
 
   &.error {
@@ -38,7 +98,7 @@
     left: 0;
     z-index: 1000;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     background-color: var(--dark-color);
     opacity: 0.4;
 
