--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@
   --border-color: rgba(24, 13, 13, 0.08);
   --copyblock-color: rgba(0, 0, 0, 0.04);
   --input-color: rgba(0, 0, 0, 0.02);
+  --links-color: #4E529A;
   --transparent: transparent;
 
   --sm-font-size: 14px;
@@ -45,6 +46,7 @@ body.dark {
   --border-color: rgba(24, 13, 13, 0.08);
   --copyblock-color: rgba(255, 255, 255, 0.2);
   --input-color: rgba(255, 255, 255, 0.02);
+  --links-color: #4E529A;
   --transparent: transparent;
 }
 
@@ -71,19 +73,23 @@ h2 {
   cursor: pointer;
 }
 
-.content-wrapper {
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
-  min-height: 100vh;
-  margin: 0;
-  background: var(--main-bg-color);
+  min-height: calc(100vh - 220px);
 
-  &.start-page {
-    background: url(./images/start_page_bg.png) no-repeat center;
-    background-size: cover;
+  &-wrapper {
+    width: 100%;
+    min-height: 100vh;
+    margin: 0;
+    background: var(--main-bg-color);
+
+    &.start-page {
+      background: url(./images/start_page_bg.png) no-repeat center;
+      background-size: cover;
+    }
   }
 }
 
@@ -195,4 +201,14 @@ body.dark > #root {
 
 #walletconnect-qrcode-modal {
   background-color: var(--transparent);
+}
+
+#walletconnect-wrapper {
+  position: relative;
+}
+
+.walletconnect-modal__base {
+  width: 560px !important;
+  height: 500px;
+  transform: translateY(-60%) !important;
 }
